# webapp

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 11faf7b6125d_initial_schema.py
backend/app/: __init__.py  audit.py  config.py  database.py  dependencies.py  errors.py  main.py  models.py  schemas.py
backend/app/api/: ownership.py  router.py
backend/app/api/routes/: anomalies.py  consolidations.py  countries.py  templates.py
backend/app/services/: __init__.py  analysis.py  comparator.py  consolidator.py  excel_reader.py  file_security.py  interfaces.py  runtime.py  table_detector.py
backend/tests/: conftest.py  test_api_workflow.py  test_excel_services.py  workbook_factory.py
demo/: README.md  pops_france_conforme.xlsx  pops_germany_anomalies.xlsx  template_pops_demo.xlsx
docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  HYPOTHESES.md  IMPLEMENTATION_PLAN.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  demo.ts  hooks.ts  main.tsx  styles.css  types.ts  utils.ts  vite-env.d.ts
frontend/src/components/: ExcelGrid.tsx  FileDropzone.tsx  ui.tsx
frontend/src/pages/: AnomaliesPage.tsx  ConsolidationPage.tsx  CountriesPage.tsx  CountryFilesPage.tsx  MappingPage.tsx  TemplatesPage.tsx
frontend/src/tests/: utils.test.ts
scripts/: generate_demo_workbooks.py
