[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pops-workbook-backend"
version = "0.1.0"
description = "POPS workbook mapping, structural validation and consolidation API"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "openpyxl>=3.1.5,<4",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.6,<3",
  "python-multipart>=0.0.12,<1",
  "sqlalchemy>=2.0.36,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
